css: Avoid too much margin within lists.

--- a/xsf-docs/xsf.css
+++ b/xsf-docs/xsf.css
@@ -47,6 +47,14 @@ p {
   text-align: justify;
 }
 
+/* Avoid too much margin within lists. */
+li p {
+  margin-left: 0px;
+}
+li pre {
+  margin-left: 0px;
+}
+
 ul {
   margin-left: 40px;
   margin-right: 40px;
